apps/tekton/tekton-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard-ingress
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  rules:
  - host: "tekton.W.X.Y.Z.nip.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: tekton-dashboard
              port:
                number: 9097
  tls:
  - hosts:
    - "tekton.W.X.Y.Z.nip.io"
    secretName: tekton-tls
